--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
 		"vercel-build": "prisma generate && prisma migrate deploy && next build"
 	},
 	"dependencies": {
+		"@auth/prisma-adapter": "^2.9.1",
 		"@prisma/client": "^6.7.0",
 		"client-only": "^0.0.1",
 		"es-toolkit": "^1.37.2",
 		"motion": "^12.10.5",
 		"next": "^15.3.2",
-		"next-auth": "^5.0.0-beta.27",
+		"next-auth": "^5.0.0-beta.28",
 		"open-props": "^1.7.15",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
