--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@auth/prisma-adapter": "^2.9.1",
 		"@prisma/client": "^6.7.0",
+		"@vercel/blob": "^1.0.1",
 		"client-only": "^0.0.1",
 		"es-toolkit": "^1.37.2",
 		"motion": "^12.10.5",
