--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "next dev --turbo",
-		"build": "prisma generate && next build",
+		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
 		"vercel-build": "prisma generate && prisma migrate deploy && next build"
